# biip

./: .fdignore  .gitignore  Cargo.toml  README.md  download.sh  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: biip.rs  lib.rs  redactor.rs
src/redactors/: env.rs  mod.rs  network.rs  patterns.rs  user.rs
