[package]
name = "biip"
description = "Redact sensitive information from text!"
version = "0.1.0"
edition = "2024"
readme = "README.md"
homepage = "https://github.com/crodjer/biip"
author = ["Rohan <code@rohanjain.in"]
license = "GPL-3.0-or-later"


[[bin]]
name = "biip"
path = "src/bin/main.rs"

[dependencies]
dotenv = "0.15"
regex = "1"
