[package]
name = "biip"
description = "Redact sensitive information from text!"
version = "0.5.0"
edition = "2024"
readme = "README.md"
homepage = "https://github.com/crodjer/biip"
license = "GPL-3.0-or-later"

[[bin]]
name = "biip"
path = "src/bin/main.rs"

[dependencies]
dotenv = "0.15"
regex = "1"
