[package]
name = "biip"
description = "Redact sensitive information from text!"
version = "0.9.2"
edition = "2024"
readme = "README.md"
homepage = "https://github.com/crodjer/biip"
license = "GPL-3.0-or-later"
repository = "https://github.com/crodjer/biip"

[[bin]]
name = "biip"
path = "src/bin/main.rs"

[dependencies]
dotenv = "0.15"
regex = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units=1
panic="abort"
strip="debuginfo"
